Improve datapackage builder for all terms, include all NameUsage term descriptions and use the latest coldp readme.